<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_amt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_shape"
            android:drawableRight="@drawable/rupee"
            android:drawablePadding="5dp"
            android:hint="@string/enter_amt"
            android:minHeight="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/recommended"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/radio_bc"
                android:button="@null"
                android:gravity="center"
                android:text="₹ 5,000"
                android:textColor="@color/textcolor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_bc"
                android:button="@null"
                android:gravity="center"
                android:text="₹ 8,000"
                android:textColor="@color/textcolor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/radio_bc"
                android:button="@null"
                android:gravity="center"
                android:text="₹ 10,000"
                android:textColor="@color/textcolor"
                android:textStyle="bold" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            android:text="@string/p_mode"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/payradiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/online"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/upi"
                android:textStyle="bold" />


        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btncancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:id="@+id/btnrecharge"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/radio_desable"
                android:text="@string/recharge"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>